<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/scoreBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_text"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                />
            <TextView
                android:id="@+id/xText"
                android:layout_below="@id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_letter_pure"
                android:textSize="50sp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/oText"
                android:layout_below="@id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o_letter_pure"
                android:textSize="50sp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/drawData"
                android:layout_below="@id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="50sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/xData"
                android:layout_toRightOf="@id/xText"
                android:layout_toEndOf="@id/xText"
                android:layout_below="@id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="50sp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp" />

            <TextView
                android:id="@+id/oData"
                android:layout_toLeftOf="@id/oText"
                android:layout_toStartOf="@id/oText"
                android:layout_below="@id/drawText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="50sp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp" />
        </RelativeLayout>

        <!--Table Layout with 3 rows and each row with 3 buttons-->
        <TableLayout
            android:id="@+id/gameBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:rowCount="3"
            android:columnCount="3"
            android:padding="8dp"
            android:layout_below="@+id/scoreBoard"
            >

            <!--Row 1-->
            <TableRow>

                <Button
                    android:id="@+id/posA"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posB"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posC"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

            </TableRow>

            <!--Row 2-->
            <TableRow>

                <Button
                    android:id="@+id/posD"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posE"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posF"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

            </TableRow>

            <!--Row 3-->
            <TableRow>

                <Button
                    android:id="@+id/posG"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posH"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

                <Button
                    android:id="@+id/posI"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    style="@style/Widget.AppCompat.Button"
                    />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/clearBoard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameBoard"
            android:text="@string/clear_board"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:onClick="clearBoard"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/resetGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/clearBoard"
            android:text="@string/reset_game"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:onClick="resetGame"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>